--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -6,12 +6,7 @@ $white-normal: #f5f7f7;
 $white-dark: #edeff0;
 $white-light: #fafcfc;
 
-$blue-normal: #2dc7ed;
-$blue-dark: #15aed4;
-$blue-light: #4ddcff;
-
-$gray-1: #777;
-
-.color-gray {
-  color: $gray-1;
-}
+$primary: #0e0b16;
+$secondary-pink: #a239ca;
+$secondary-purple: #4717f6;
+$tertiary: #e7dfdd;
