--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -1,20 +1,20 @@
 h1 {
-  font-size: 9.6rem;
+  font-size: 5.4rem;
   line-height: 100%;
 }
 
 h2 {
-  font-size: 7.2rem;
+  font-size: 4.2rem;
   line-height: 110%;
 }
 
 h3 {
-  font-size: 4rem;
+  font-size: 3.6rem;
   line-height: 110%;
 }
 
 h4 {
-  font-size: 3.2rem;
+  font-size: 3rem;
   line-height: 120%;
 }
 
@@ -38,81 +38,78 @@ h6 {
   }
 }
 
-.link {
-  padding: 8px 24px;
-  font-size: 2.4rem;
-  position: relative;
-  transition: 0.5s ease;
-
-  &::after {
-    content: "";
-    display: inline-block;
-
-    position: absolute;
-    top: 100%;
-    left: 0;
-
-    width: 0%;
-    height: 2px;
-
-    transition: 0.5s ease;
-    transform: translate(20%, -50%);
-
-    background-color: $white-normal;
-  }
-
-  &:hover {
-    opacity: 0.8;
-
-    &::after {
-      width: 70%;
-    }
-  }
-}
-
 .text-center {
   text-align: center;
 }
 
 .mask {
-  background: linear-gradient(225deg, #2dc7ed 0%, #538bf0 100%);
+  background: linear-gradient(225deg, #4717f6 0%, #a239ca 100%);
 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.square {
+.line {
   display: inline-block;
+  border-right: 2px solid red;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.typing-animation {
+  animation: blinkCursor 500ms steps(40) infinite normal,
+    typing 4s steps(40) 1s infinite both;
+}
 
-  margin-top: 64px;
-  padding: 16px 24px;
-
-  font-size: 24px;
-  position: relative;
-
-  &::after {
-    content: "";
-    display: block;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    z-index: -1;
-
-    width: 120px;
-    height: 120px;
-
-    transition: 1s ease;
-    transform: translate(-5%, -18%) rotate(60deg);
-    border-radius: 4px;
-
-    background: linear-gradient(225deg, #2dc7ed 0%, rgba(83, 139, 240, 0) 100%);
+@keyframes blinkCursor {
+  from {
+    border-right-color: red;
   }
-
-  &:hover {
-    &::after {
-      transform: translate(0%, -15%) rotate(300deg);
-    }
+  to {
+    border-right-color: transparent;
   }
 }
+
+@keyframes typing {
+  from {
+    width: 0em;
+  }
+  to {
+    width: 7em;
+  }
+}
+
+// .square {
+//   display: inline-block;
+
+//   margin-top: 64px;
+//   padding: 16px 24px;
+
+//   font-size: 24px;
+//   position: relative;
+
+//   &::after {
+//     content: "";
+//     display: block;
+
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+
+//     z-index: -1;
+
+//     width: 120px;
+//     height: 120px;
+
+//     transition: 1s ease;
+//     transform: translate(-5%, -18%) rotate(60deg);
+//     border-radius: 4px;
+
+//     background: linear-gradient(225deg, #2dc7ed 0%, rgba(83, 139, 240, 0) 100%);
+//   }
+
+//   &:hover {
+//     &::after {
+//       transform: translate(0%, -15%) rotate(300deg);
+//     }
+//   }
+// }
