--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-.color-gray {
-  color: #777;
-}
-
 * {
   margin: 0px;
   padding: 0px;
@@ -16,20 +12,22 @@
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   width: 100%;
-  background-color: #050607;
-  color: #f5f7f7;
+  background-color: #0e0b16;
+  color: #e7dfdd;
 }
 
 a {
-  color: #f5f7f7;
+  color: #e7dfdd;
 }
 
 .s-0 {
@@ -638,22 +636,22 @@ a {
 }
 
 h1 {
-  font-size: 9.6rem;
+  font-size: 5.4rem;
   line-height: 100%;
 }
 
 h2 {
-  font-size: 7.2rem;
+  font-size: 4.2rem;
   line-height: 110%;
 }
 
 h3 {
-  font-size: 4rem;
+  font-size: 3.6rem;
   line-height: 110%;
 }
 
 h4 {
-  font-size: 3.2rem;
+  font-size: 3rem;
   line-height: 120%;
 }
 
@@ -676,80 +674,77 @@ h6 {
   }
 }
 
-.link {
-  padding: 8px 24px;
-  font-size: 2.4rem;
-  position: relative;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
-}
-
-.link::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
-  -webkit-transform: translate(20%, -50%);
-          transform: translate(20%, -50%);
-  background-color: #f5f7f7;
-}
-
-.link:hover {
-  opacity: 0.8;
-}
-
-.link:hover::after {
-  width: 70%;
-}
-
 .text-center {
   text-align: center;
 }
 
 .mask {
-  background: linear-gradient(225deg, #2dc7ed 0%, #538bf0 100%);
+  background: linear-gradient(225deg, #4717f6 0%, #a239ca 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.square {
+.line {
   display: inline-block;
-  margin-top: 64px;
-  padding: 16px 24px;
-  font-size: 24px;
+  border-right: 2px solid red;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.typing-animation {
+  -webkit-animation: blinkCursor 500ms steps(40) infinite normal, typing 4s steps(40) 1s infinite both;
+          animation: blinkCursor 500ms steps(40) infinite normal, typing 4s steps(40) 1s infinite both;
+}
+
+@-webkit-keyframes blinkCursor {
+  from {
+    border-right-color: red;
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+
+@keyframes blinkCursor {
+  from {
+    border-right-color: red;
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+
+@-webkit-keyframes typing {
+  from {
+    width: 0em;
+  }
+  to {
+    width: 7em;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0em;
+  }
+  to {
+    width: 7em;
+  }
+}
+
+.relative {
   position: relative;
 }
 
-.square::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 120px;
-  height: 120px;
-  -webkit-transition: 1s ease;
-  transition: 1s ease;
-  -webkit-transform: translate(-5%, -18%) rotate(60deg);
-          transform: translate(-5%, -18%) rotate(60deg);
-  border-radius: 4px;
-  background: linear-gradient(225deg, #2dc7ed 0%, rgba(83, 139, 240, 0) 100%);
-}
-
-.square:hover::after {
-  -webkit-transform: translate(0%, -15%) rotate(300deg);
-          transform: translate(0%, -15%) rotate(300deg);
-}
-
-.menu {
+.container {
   width: 100%;
-  padding: 48px 16px;
+  height: auto;
+  background-color: #0e0b16;
+}
+
+.container__hero {
+  max-width: 1256px;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -763,57 +758,9 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: fixed;
-  z-index: 999;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-}
-
-@media (max-width: 960px) {
-  .menu .menu-left {
-    display: none;
-  }
-  .menu .menu-right {
-    display: none;
-  }
-}
-
-.relative {
-  position: relative;
-}
-
-.container {
-  width: 100%;
-  max-width: 1220px;
+  padding: 0px 16px;
   margin: 0 auto;
-  padding: 24px 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media (max-width: 960px) {
-  .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding-top: 96px;
-  }
-}
-
-.hero {
-  height: 100vh;
+  width: 100%;
 }
 
 @media (max-width: 960px) {
@@ -822,35 +769,9 @@ h6 {
   }
 }
 
-.container-item:nth-child(1) {
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
-  margin: 40px 0px;
-}
-
-.container-item:nth-child(2) {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  margin: 40px 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.container-item:nth-child(2) img {
-  max-width: 400px;
+.container-item__text {
+  width: 100%;
+  max-width: 350px;
 }
 
 .bg-hero {
@@ -906,6 +827,15 @@ h6 {
           justify-content: center;
 }
 
+.home__blob {
+  width: 600px;
+  overflow: hidden;
+}
+
+.home__blob-img {
+  width: 230px;
+}
+
 .bb-gray {
   width: 100%;
   border-bottom: 1px solid #15171a;
@@ -954,5 +884,84 @@ h6 {
   width: 100%;
   margin: 0 auto;
   padding: 16px 24px;
+}
+
+.menu {
+  width: 100%;
+  border-bottom: 1px solid rgba(231, 223, 221, 0.2);
+  position: fixed;
+  z-index: 999;
+  -webkit-backdrop-filter: blur(60px);
+          backdrop-filter: blur(60px);
+}
+
+.menu__container {
+  width: 100%;
+  max-width: 1256px;
+  padding: 32px 16px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.link {
+  font-size: 1.8rem;
+  margin-left: 16px;
+  position: relative;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.link::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  -webkit-transform: translate(20%, -50%);
+          transform: translate(20%, -50%);
+  background-color: #f5f7f7;
+}
+
+.link:hover {
+  opacity: 0.8;
+}
+
+.link:hover::after {
+  width: 70%;
+}
+
+.btn-primary {
+  display: inline-block;
+  height: 4.2rem;
+  background-color: #4717f6;
+  color: #e7dfdd;
+  line-height: 4.2rem;
+  border-radius: 6px;
+  padding: 0 5rem;
+  font-weight: bold;
+  font-size: 1.8rem;
+  cursor: pointer;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+.btn-primary:hover {
+  background-color: #a239ca;
 }
 /*# sourceMappingURL=styles.css.map */
