--- a/css/styles.css
+++ b/css/styles.css
@@ -868,6 +868,58 @@ p {
           justify-content: space-between;
 }
 
+.person__content {
+  width: 45%;
+}
+
+.person__image {
+  position: relative;
+  width: 100%;
+  max-width: 730px;
+}
+
+.person__image--svg {
+  position: absolute;
+  top: -330px;
+  left: 60px;
+  height: auto;
+  width: 100%;
+}
+
+.work {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.work__content {
+  width: 45%;
+}
+
+.work__image {
+  position: relative;
+  width: 100%;
+  max-width: 700px;
+}
+
+.work__image--svg {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: -250px;
+  left: -150px;
+}
+
 .skills {
   display: -webkit-box;
   display: -ms-flexbox;
